Agrego Disqus y analytics.

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -3,3 +3,5 @@
 # in a template to get the contents of the `title` key.
 title: Your argument is invalid
 subtitle: Luis Montealegre
+disqus: montealegreluis
+analytics: UA-56875620-1
