Separate common HTMl elements to be treated as Twig includes.

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -3,5 +3,6 @@
 # in a template to get the contents of the `title` key.
 title: Your argument is invalid
 subtitle: Luis Montealegre
+url: http://www.montealegreluis.com
 disqus: montealegreluis
 analytics: UA-56875620-1
