--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -1,3 +1,8 @@
 sculpin_content_types:
     posts:
         permalink: blog/:year/:month/:day/:slug_title/
+services:
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
