--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -3,3 +3,4 @@ subtitle: Luis Montealegre
 url: http://www.montealegreluis.com
 author: Luis Montealegre
 email: montealegreluis@gmail.com
+disqus: montealegreluis
