Update about page.

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -4,3 +4,4 @@ url: http://www.montealegreluis.com
 author: Luis Montealegre
 email: montealegreluis@gmail.com
 disqus: montealegreluis
+analytics: UA-56875620-1
